umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_2D-stereo.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: CBrClFI
    atom_count: 5
    bond_count: 4
    property_count: 1
molecule_lenient:
  success: true
  summary:
    sum_formula: CBrClFI
    atom_count: 5
    bond_count: 4
    property_count: 1
extended_molecule:
  success: true
  extended_summary:
    sum_formula: CBrClFI
    atom_count: 5
    bond_count: 4
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: CBrClFI
    atom_count: 5
    bond_count: 4
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
